# cryptoCMD

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Pipfile  README.md  README.rst  btc_all_time.csv  pyproject.toml  release-please-config.json  requirements.txt  setup.py  solana_all_time.csv
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release-please.yml  release.yml
cryptocmd/: __init__.py  cli.py  core.py  fiat_ids.json  trending.py  utils.py
examples/: btc_all_time.csv  btc_all_time_old.csv  get_by_coin_name.py  get_by_id_number.py  get_csv.py  get_trending.py  sol_all_time.csv  solana_all_time.csv
samples/: market-historical.py  market-period.py
tests/: test_scraper.py
