[tool.poetry]
name = "cryptocmd"
version = "0.6.3"
description = "Cryptocurrency historical market price data scrapper."
authors = ["Rohit Gupta <rohitgtech+git@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/guptarohit/cryptoCMD"
repository = "https://github.com/guptarohit/cryptoCMD"
keywords = ["cryptocurrency", "cryptocurrency historical data", "coinmarketcap", "dataset", "historical cryptocurrency prices"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
tablib = "*"

[tool.poetry.dev-dependencies]
black = "^23.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
