[tool.poetry]
name = "cryptocmd"
version = "0.6.4"
description = "Cryptocurrency historical market price data scrapper."
authors = ["Rohit Gupta <rohitgtech+git@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/guptarohit/cryptoCMD"
repository = "https://github.com/guptarohit/cryptoCMD"
keywords = ["cryptocurrency", "cryptocurrency historical data", "coinmarketcap", "dataset", "historical cryptocurrency prices"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
tablib = "*"
setuptools = { version = "*", python = ">=3.12" }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.3.5,<0.6.0"
pre-commit = { version = "*", python = ">=3.9" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length=88

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
force-sort-within-sections = true
